--- a/pom.xml
+++ b/pom.xml
@@ -131,18 +131,27 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
+   <!-- ✅ JUnit Jupiter (JUnit 5) -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
-        <version>5.10.0</version>
+        <version>5.10.2</version>
         <scope>test</scope>
     </dependency>
 
-    <!-- Mockito -->
+    <!-- ✅ Mockito tương thích JDK 21 -->
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>5.5.0</version>
+        <version>5.12.0</version>
+        <scope>test</scope>
+    </dependency>
+
+    <!-- (Tùy chọn) Mockito tích hợp với JUnit 5 -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>5.12.0</version>
         <scope>test</scope>
     </dependency>
 
@@ -184,6 +193,11 @@
                     </goals>
                 </execution>
             </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>            <!-- ✅ Bắt buộc để chạy test JUnit5 trên JDK21 -->
         </plugin>
 
 
