--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
     <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
+        <version>1.18.38</version> 
         <optional>true</optional>
     </dependency>
 
@@ -178,7 +179,22 @@
         <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.10</version>
+            <version>0.8.12</version>
+
+            <configuration>
+                <!-- ✅ Loại bỏ các package không thuộc core feature -->
+                <excludes>
+                    <exclude>**/controller/**</exclude>
+                    <exclude>**/config/**</exclude>
+                    <exclude>**/dto/**</exclude>
+                    <exclude>**/domain/**</exclude>
+                    <exclude>**/exception/**</exclude>
+                    <exclude>**/security/**</exclude>
+                    <exclude>**/service/event/**</exclude>
+                    <exclude>**/service/impl/feature/**</exclude>
+                </excludes>
+            </configuration>
+
             <executions>
                 <execution>
                     <goals>
@@ -194,14 +210,33 @@
                 </execution>
             </executions>
         </plugin>
+
+        <!-- ✅ Plugin JUnit5 trên JDK21 -->
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.2.5</version>            <!-- ✅ Bắt buộc để chạy test JUnit5 trên JDK21 -->
+            <version>3.2.5</version>
         </plugin>
 
+        <!-- ✅ Plugin Compiler kích hoạt Lombok -->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.14.0</version>
+    <configuration>
+        <release>21</release>        <!-- thay source/target bằng release -->
+        <annotationProcessorPaths>
+            <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.38</version>
+            </path>
+        </annotationProcessorPaths>
+    </configuration>
+</plugin>
 
     </plugins>
 </build>
+
 
 </project>
