Function cơ bản của user
Chưa sửa phần session ( Có thể sửa lại lỗi cho mấy lớp để merge SecurityConfig,AuthController để chạy được ổn)

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,18 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
+    <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.36.0</version>
+            <!-- Exclude commons-logging to avoid conflicts with Spring Boot's logging -->
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 </dependencies>
 
 
