--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,21 @@
             </exclusions>
         </dependency>
 
+        <!-- Cloudinary Dependency -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.36.0</version>
+            <!-- Exclude commons-logging to avoid conflicts with Spring Boot's logging -->
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
     </dependencies>
 
 
