--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,11 @@
-# Production Configuration
-# This file contains production-specific settings
+# # Production Configuration
+# # This file contains production-specific settings
 
-# Base URL for email links in production
-app.base-url=https://devcollab.app
+# # Base URL for email links in production
+# app.base-url=https://devcollab.app
 
-# Override other production-specific settings here if needed
-# Example:
-# spring.datasource.url=jdbc:sqlserver://prod-server:1433;databaseName=DevCollab;encrypt=true
-# spring.mail.host=smtp.production.com
+# # Override other production-specific settings here if needed
+# # Example:
+# # spring.datasource.url=jdbc:sqlserver://prod-server:1433;databaseName=DevCollab;encrypt=true
+# # spring.mail.host=smtp.production.com
 
